--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
+  width: 100%;
+  height: 100%;
+  font-family: sans-serif;
   text-align: center;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
