--- a/src/Style/AuthSection.css
+++ b/src/Style/AuthSection.css
@@ -6,7 +6,7 @@
 .authSection__wrapper {
   width: 100%;
   height: 100%;
-  padding: 0 10%;
+  padding: 0 20%;
 }
 .authSection__header {
   display: flex;
@@ -28,4 +28,7 @@
 .authSection__main {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
