--- a/src/Style/FormStyle.css
+++ b/src/Style/FormStyle.css
@@ -4,24 +4,23 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  padding: 0 30%;
+  justify-content: space-around;
+  padding: 0% 30% 15% 30%;
 }
 .auth-form__titile,
 .reg-form__titile {
   color: white;
   font-size: 20px;
-  padding: 12% 0;
 }
 .auth-form__input,
 .reg-form__input {
   background: none;
   border: none;
   border-bottom: 1px solid white;
-  padding: 10px 0;
-  margin-bottom: 14%;
   outline: none;
   color: white;
+  padding: 2% 0;
+  margin: 5% 0;
 }
 .auth-form__input:focus,
 .reg-form__input:focus {
@@ -36,6 +35,7 @@
 .reg-form__inputs {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
 }
 .auth-form__input::placeholder,
 .reg-form__input::placeholder {
@@ -45,13 +45,23 @@
 .auth-form__button,
 .reg-form__button {
   width: 100%;
-  padding-top: 40%;
 }
 .reg-form__postscript {
   color: white;
-  font-size: 11px;
-  padding-top: 10px;
+  font-size: 13px;
   cursor: pointer;
   font-weight: 400;
   opacity: 0.9;
+}
+@media screen and (max-width: 1550px) {
+  .auth-form,
+  .reg-form {
+    padding: 0% 25% 25% 25%;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .auth-form,
+  .reg-form {
+    padding: 0% 10% 35% 10%;
+  }
 }
