--- a/src/Style/FormStyle.css
+++ b/src/Style/FormStyle.css
@@ -65,3 +65,15 @@
     padding: 0% 10% 35% 10%;
   }
 }
+
+.button-submit {
+  outline: none;
+  padding: 15px;
+  background: white;
+  border: none;
+  border-radius: 3px;
+  width: 100%;
+  font-size: 17px;
+  font-weight: 540;
+  cursor: pointer;
+}
